# pet

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  amvera.yml  config.py  database.py  docker-compose-local.yaml  docker-compose-test.yml  docker-compose.yml  healthcheck.py  locustfile.py  main.py  pyproject.toml  requirements.txt  run.sh  команда
.github/workflows/: build-and-test.yml
alembic/: env.py
alembic/versions/: 1e473362d954_user_and_scopes.py  893f1dc33f82_user_and_scope.py  fd257895d0b1_users_and_scopes.py
authorization/: api.py  dependencies.py  hashing.py  mail.py  utils.py
dao/: base_dao.py  user_dao.py
exception_handlers/: sqlalchemy_handler.py
middleware/: __init__.py  api.py  prometheus_middleware.py
models/: __init__.py  base.py  user.py  user_scope.py
nginx/: nginx.conf
nginx_dev/: nginx.conf
nginx_prod/: nginx.conf
producers/: login_producer.py  logout_producer.py  utils.py
schemas/: user.py
tests/: conftest.py
tests/integration_tests/: conftest.py  test_api_integration.py
tests/unit_tests/: conftest.py  test_api_unit.py  test_dao.py  test_dao_unit.py
